WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281078
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-lines/multi-line-wrap-reverse-row-reverse.html
https://bugs.webkit.org/show_bug.cgi?id=281078
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-lines/multi-li...
alan
Reported
2024-10-08 12:07:03 PDT
ssia
Attachments
[fast-cq]Patch
(2.44 KB, patch)
2024-10-08 12:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-08 12:17:23 PDT
Created
attachment 472866
[details]
[fast-cq]Patch
EWS
Comment 2
2024-10-09 05:31:57 PDT
Committed
284885@main
(a3988437b0f0): <
https://commits.webkit.org/284885@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472866
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-10-09 05:32:14 PDT
<
rdar://problem/137585024
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug