[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-lines/multi-line-wrap-reverse-row-reverse.html https://bugs.webkit.org/show_bug.cgi?id=281078

Reviewed by Antti Koivisto.

1. Let's take the before margin into account when computing _reversed_ position
2. drop minimum size for now (it may come back in some other form).

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::setFlexItemsGeometry):

Canonical link: https://commits.webkit.org/284885@main